<resources>
    <string name="app_name">MashineShop</string>
    <string name="game_des">날아오는 립스틱을 화면을 터치해서 가운데에 위치한 토니모리 제품에 모두 꽂아주세요.\n\n 3단계 까지 성공하시면 선택하신 토니모리 제품을 선물로 드려요!</string>
    <string name="success_des">짝짝짝! 성공하셨습니다! \n아래 상품 출구에서 상품을 가져가세요.</string>


    <string name="ui_base_back">返回</string>
    <string name="ui_base_exit">退出系统</string>
    <string name="background_menu_settings">菜单设置</string>
    <string name="background_menu_set_tool">设置工具</string>
    <string name="background_menu_func_set">功能设置</string>
    <string name="background_menu_drop_sensor_whole">整机掉货检测</string>
    <string name="background_menu_enable_bill_escrow">纸币可以退回</string>
    <string name="background_menu_enable_change">硬币可以找零</string>
    <string name="background_serial_port_setup">串口设置</string>
    <string name="serial_port_motherboard_serial">主板串口</string>
    <string name="serial_port_motherboard_baud_rate">主板波特率</string>
    <string name="serial_port_server_serial">副柜串口</string>

    <string name="background_menu_give_change_direct">直接找零</string>
    <string name="background_menu_glass_demist_enable">玻璃除雾</string>

    <string name="background_tip_wait_amoment">请稍候</string>
    <string name="background_tip_select_sure">请选择确定</string>

    <string name="background_background_notify_loading">正在加载</string>
    <string name="background_tip_set_select_cabinet_no">以下设置请先选择柜号</string>
    <string name="background_backgroound_clear_fault">清除故障</string>
    <string name="background_backgroound_query_fault">查询故障</string>
    <string name="background_drive_setting">设置中</string>
    <string name="background_drive_tips_input_slotno">请输入货道号！</string>
    <string name="background_drive_tips_select_cabinetno">请选择柜号</string>
    <string name="background_drive_modify_ask">确定修改？</string>
    <string name="background_drive_set">设置</string>
    <string name="background_drive_query">查询</string>
    <string name="background_drive_clean">清除</string>
    <string name="background_drive_clean_fault">清除驱动板故障</string>
    <string name="background_drive_query_slot">查询货道</string>
    <string name="background_drive_query_fault">查询驱动板故障</string>
    <string name="background_spring_self_check">自检</string>

    <string name="background_backgroound_ensure">确定</string>
    <string name="background_backgroound_cancel">取消</string>

    <string name="background_lift_tips_select_control_action">请选择控制动作！</string>
    <string name="background_lift_tips_select_query_parameters">请选择查询参数！</string>
    <string name="background_lift_tips_select_set_parameters">请选择要设置的参数！</string>
    <string name="background_lift_tips_set_value_canont_empty">设置的值不能为空！</string>

    <string name="background_notify_contact_merchant">请联系商家</string>
    <string name="background_drive_tips_clean_fault_success">清除故障成功</string>
    <string name="background_drive_tips_no_fault">无故障</string>
    <string name="background_drive_tips_have_fault">有故障</string>
    <string name="ui_base_notify_coin_back">正在退币</string>
    <string name="ui_base_notify_coinback_success">退币成功</string>
    <string name="ui_base_notify_coinback_fail">退币失败</string>

    <string name="ui_base_notify_slot">货道: </string>
    <string name="ui_base_notify_not_open">暂未开通</string>
    <string name="ui_base_notify_loading">正在加载</string>
    <string name="ui_base_notify_load_fail">加载失败</string>
    <string name="ui_base_notify_invalid_slot">无效货道</string>
    <string name="ui_base_notify_sys_busy">系统忙</string>
    <string name="ui_base_notify_slot_faultSlot">故障货道</string>
    <string name="ui_base_notify_slot_fault">故障货道: </string>
    <string name="ui_base_notify_slot_code">故障代码: </string>
    <string name="ui_base_notify_slot_err">故障: </string>
    <string name="ui_base_notify_sold_out">该商品售空,请选择其他商品！</string>
    <string name="ui_base_notify_select_other">请选择其他商品！</string>
    <string name="ui_base_aisle_name">货道号</string>
    <string name="ui_base_notify_shipping">正在出货</string>
    <string name="ui_base_notify_shipment_fail">出货失败</string>
    <string name="ui_base_notify_contact_merchant">请联系商家</string>
    <string name="ui_base_notify_fail_contact">出货失败，请联系商家！</string>
    <string name="ui_base_notify_shipment_success">出货成功</string>
    <string name="ui_base_notify_receive_goods">请领取您的商品</string>
    <string name="ui_base_notify_shipsuc_rec_notify">出货成功，请领取您的商品！</string>
    <string name="ui_base_notify_receive_goods_first">请取走商品</string>

    <string name="background_lat_query_addr">查询格子地址</string>
    <string name="background_lat_query_slot">查询格子</string>
    <string name="background_lat_input_start_cabinetno">请输入起始格子号</string>
    <string name="background_lat_input_start_row">请输入起始行</string>
    <string name="background_lat_input_row">请输入行号</string>
    <string name="background_lat_input_start_column">请输入起始列</string>
    <string name="background_lat_input_end_column">请输入结束列</string>
    <string name="background_lat_input_cabinetno">请输入格子号</string>
    <string name="background_lat_set_success">设置成功</string>
    <string name="background_lat_start_cabinetno">起始格子号</string>
    <string name="background_lat_end_cabinetno">结束格子号</string>
    <string name="background_lat_open_cabinetno">打开格子</string>
    <string name="background_lat_close_cabinetno">关闭格子</string>
    <string name="background_lat_start_row">起始行(0-11)</string>
    <string name="background_lat_end_row">结束行(0-11)</string>
    <string name="background_lat_set_scan_light">扫描灯设置</string>
    <string name="background_lat_row">行（1-10）</string>
    <string name="background_lat_start_column">起始列（1-8）</string>
    <string name="background_lat_end_column">结束列（1-8）</string>
    <string name="background_lat_invaild">无效</string>
    <string name="background_lat_set_vaild">格子有效设置</string>
    <string name="background_drive_slot_testing">货道测试中</string>
    <string name="background_notify_sys_busy">系统忙</string>
    <string name="background_notify_slot_fault">故障货道: </string>
    <string name="background_notify_slot_code">故障代码: </string>
    <string name="background_snake_slotno_err">货道错误</string>
    <string name="background_snake_have_no_goods">无货</string>
    <string name="background_snake_have_goods">有货</string>
    <string name="background_notify_shipment_success">出货成功</string>
    <string name="background_notify_receive_goods">请领取您的商品</string>
    <string name="background_drive_check_seriport">请检查串口通讯</string>
    <string name="background_drive_success">成功</string>
    <string name="background_notify_shipment_fail">出货失败</string>
    <string name="ui_base_menu_save">保存</string>
    <string name="ui_base_begin">开始</string>
    <string name="ui_base_backgroound_ensure">确认</string>
    <string name="ui_base_backgroound_cancel">取消</string>
    <string name="ui_base_end">结束</string>
    <string name="ui_base_saving">保存</string>



    <string name="alert_box">죄송합니다. 선택하신 번호에 상품이 없습니다. 다른 번호를 선택해 주세요. </string>
    <string name="alert_input_box">죄송하지만\n 상자 번호를 입력하십시오</string>
    <string name="alert_input_phone_error">오늘 이미 참여하셨습니다. \n다음에 참여해 주세요</string>
    <string name="alert_input_phone">정확한 핸드폰 번호를 입력해주세요.</string>
</resources>
