<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_background"
    android:orientation="vertical">


    <com.tcn.sdk.latticelpstkdemo.Titlebar
        android:id="@+id/menu_setttings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

    </com.tcn.sdk.latticelpstkdemo.Titlebar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/main_serport"
                android:layout_width="match_parent"
                android:layout_marginTop="10px"
                android:gravity="center"
                android:text="设置串口"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:background="@color/blue"
                android:layout_height="60px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD
                    android:id="@+id/menu_lat_query_addr"
                    android:layout_width="0px"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    style="@style/background_lrmarginss">

                </com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD>

                <com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD
                    android:id="@+id/menu_lat_query_slot"
                    android:layout_width="0px"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    style="@style/background_lrmarginss">

                </com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD>
            </LinearLayout>


            <com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD
                android:id="@+id/menu_lat_ship_slot"
                android:layout_width="match_parent"
                android:layout_height="100px"
                style="@style/background_lrmarginss">

            </com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD>

            <com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD
                android:id="@+id/menu_lat_reqselect"
                android:layout_width="match_parent"
                android:layout_height="100px"
                style="@style/background_lrmarginss">

            </com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD>

            <com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD
                android:id="@+id/menu_lat_select_addr"
                android:layout_width="match_parent"
                android:layout_height="100px"
                style="@style/background_lrmarginss">

            </com.tcn.sdk.latticelpstkdemo.ButtonEditSelectD>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:layout_marginLeft="30px"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_start_cabinetno" />
                <EditText
                    android:id="@+id/m_lattice_open_batch_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:numeric="integer"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_end_cabinetno" />
                <EditText
                    android:id="@+id/m_lattice_open_batch_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:numeric="integer"/>

                <Button
                    android:id="@+id/m_lattice_open_batch_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10px"
                    android:background="@drawable/ui_base_btn_selector"
                    style="@style/background_menubutton_20"
                    android:text="@string/background_lat_open_cabinetno" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_lattice_close_batch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_start_cabinetno" />
                <EditText
                    android:id="@+id/m_lattice_close_batch_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:numeric="integer"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_end_cabinetno" />
                <EditText
                    android:id="@+id/m_lattice_close_batch_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:numeric="integer"/>

                <Button
                    android:id="@+id/m_lattice_close_batch_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10px"
                    android:background="@drawable/ui_base_btn_selector"
                    style="@style/background_menubutton_20"
                    android:text="@string/background_lat_close_cabinetno" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_scan_light_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_start_row" />
                <EditText
                    android:id="@+id/m_scan_light_num_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:numeric="integer"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_end_row" />
                <EditText
                    android:id="@+id/m_scan_light_num_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:numeric="integer"/>

                <Button
                    android:id="@+id/m_scan_light_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@drawable/ui_base_btn_selector"
                    android:layout_marginLeft="10px"
                    style="@style/background_menubutton_20"
                    android:text="@string/background_lat_set_scan_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_lattice_num_set_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_row" />
                <EditText
                    android:id="@+id/m_lattice_num_set_row"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:numeric="integer"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_start_column" />
                <EditText
                    android:id="@+id/m_lattice_num_set_column_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:numeric="integer"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_end_column" />
                <EditText
                    android:id="@+id/m_lattice_num_set_column_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:numeric="integer"/>

                <CheckBox
                    android:id="@+id/m_lattice_num_set_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textColor="@color/background_black"
                    android:text="@string/background_lat_invaild" />

                <Button
                    android:id="@+id/m_lattice_num_set_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ui_base_btn_selector"
                    style="@style/background_menubutton_20"
                    android:text="@string/background_lat_set_vaild" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/m_kh_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/m_kh_game_win_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ui_base_btn_selector"
                    android:layout_marginLeft="10px"
                    style="@style/background_menubutton_20"
                    android:text="游戏中奖效果" />

                <Button
                    android:id="@+id/m_kh_game_fail_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ui_base_btn_selector"
                    android:layout_marginLeft="10px"
                    style="@style/background_menubutton_20"
                    android:text="游戏失败效果" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
